Fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -561,7 +561,7 @@ body {
 
 .projects {
   background-color: #0f0f0f;
-  overflow: scroll;
+  overflow: auto;
   max-height: 100vh;
   max-width: 100vw;
 }
