--- a/sass/partials/_sections.scss
+++ b/sass/partials/_sections.scss
@@ -148,7 +148,7 @@ body {
 // Projects page
 .projects {
     background-color: #0f0f0f;
-    overflow: scroll;
+    overflow: auto;
     max-height: 100vh;
     max-width: 100vw;
 
